modification de la section download

--- a/index.html
+++ b/index.html
@@ -403,14 +403,15 @@
         <section id="download" class="download_section padding">
             <div class="container">
                 <div class="counter_content">
-                    <h3 class="counter">12649</h3>
+                    <h3 class="counter">00</h3>
                     <h4>Total App Downloaded</h4>
-                    <h5>Get Your App Now. Available On Google Play Store & The App Store!</h5>
+                    <!-- <h5>Get Your App Now. Available On Google Play Store & The App Store!</h5> -->
+                    <h5>Get Your App Now. Available On Google Play Store!</h5>
                 </div>
                <ul class="download_content">
-                   <li><a href="#"><i class="fa fa-windows"></i></a></li>
+                   <!-- <li><a href="#"><i class="fa fa-windows"></i></a></li> -->
                    <li><a href="#"><i class="fa fa-android"></i></a></li>
-                   <li><a href="#"><i class="fa fa-apple"></i></a></li>
+                   <!-- <li><a href="#"><i class="fa fa-apple"></i></a></li> -->
                </ul>
             </div>
         </section><!-- /.download_section -->
