modifications de plusieurs sections

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div id="navbar" class="collapse navbar-collapse navbar-right">
 						<ul class="nav navbar-nav nav-menu">
                             <li class="active"><a data-scroll href="#home">Home <span class="sr-only">(current)</span></a></li>
-							<li><a data-scroll href="#features">Features</a></li>
+							<li><a data-scroll href="#features">Capabilities</a></li>
 							<li><a data-scroll href="#screenshots">Screenshots</a></li>
 							<li><a data-scroll href="#pricing">Pricing</a></li>
 							<li><a data-scroll href="#download">Download</a></li>
@@ -143,7 +143,7 @@
                             <li>Intuitive organization.</li>
                             <li>Simplified home management.</li>
                         </ul>
-                        <a href="#" class="app_btn">Explore</a>
+                        <a href="#features" class="app_btn">Explore</a>
                     </div>
                 </div>
             </div>
@@ -205,7 +205,7 @@
            <div class="container">
                <div class="section_heading mb-40 align-center">
                    <h2>App Screenshots</h2>
-                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                   <p>Discover our app's features and design with these key screenshots.</p>
                </div>
                <ul id="app_carousel" class="app_carousel owl-carousel">
                    <li class="shot_item">
@@ -321,7 +321,7 @@
             <div class="container">
                 <div class="heading align-center mb-40">
                     <h2>Plans & Pricing</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    <p>Explore our range of plans and pricing options tailored to fit your needs. </p>
                 </div><!-- /.heading -->
                 <div class="pricing_items">
                     <div class="col-md-3 col-xs-6 sm-padding">
@@ -524,14 +524,14 @@
 		<footer class="footer_section">
 			<div class="container">
 				<div class="col-sm-6 xs-padding">
-					<p class="copyright">&copy; 2017 Appdent Powered by WowThemez.</p>
+					<p class="copyright">&copy; 2024 SmartHome Powered by SMARTSANA technologies.</p>
 				</div>
 				<nav class="col-sm-6 xs-padding">
 					<ul class="footer_menu">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">Download</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#features">Capabilities</a></li>
+						<li><a href="#download">Download</a></li>
+						<!-- <li><a href="#">Contact</a></li> -->
 					</ul>
 				</nav>
 			</div>
