--- a/index.html
+++ b/index.html
@@ -528,10 +528,10 @@
 				</div>
 				<nav class="col-sm-6 xs-padding">
 					<ul class="footer_menu">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#features">Capabilities</a></li>
-						<li><a href="#download">Download</a></li>
-						<!-- <li><a href="#">Contact</a></li> -->
+						<li><a data-scroll href="#home">Home</a></li>
+						<li><a data-scroll href="#features">Capabilities</a></li>
+						<li><a data-scroll href="#download">Download</a></li>
+						<!-- <li><a data-scroll href="#">Contact</a></li> -->
 					</ul>
 				</nav>
 			</div>
