modification des textes

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             <div class="pricing_head">
                                 <h5>BASIC</h5>
                                 <h3>$49 <span>/ Month</span></h3>
-                                <p class="no-margin">Appdent Pricing Table Design.</p>
+                                <p class="no-margin">SmartHome Pricing Table Design.</p>
                             </div><!-- /.pricing_head -->
                             <ul class="pricing_list">
                                 <li>1 User</li>
@@ -347,7 +347,7 @@
                             <div class="pricing_head">
                                 <h5>BUSINESS</h5>
                                 <h3>$99 <span>/ Month</span></h3>
-                                <p class="no-margin">Appdent Pricing Table Design.</p>
+                                <p class="no-margin">SmartHome Pricing Table Design.</p>
                             </div><!-- /.pricing_head -->
                             <ul class="pricing_list">
                                 <li>1 User</li>
@@ -365,7 +365,7 @@
                             <div class="pricing_head">
                                 <h5>PREMIUM</h5>
                                 <h3>$149 <span>/ Month</span></h3>
-                                <p class="no-margin">Appdent Pricing Table Design.</p>
+                                <p class="no-margin">SmartHome Pricing Table Design.</p>
                             </div><!-- /.pricing_head -->
                             <ul class="pricing_list">
                                 <li>1 User</li>
@@ -383,7 +383,7 @@
                             <div class="pricing_head">
                                 <h5>ULTIMATE</h5>
                                 <h3>$199 <span>/ Month</span></h3>
-                                <p class="no-margin">Appdent Pricing Table Design.</p>
+                                <p class="no-margin">SmartHome Pricing Table Design.</p>
                             </div><!-- /.pricing_head -->
                             <ul class="pricing_list">
                                 <li>1 User</li>
@@ -440,7 +440,7 @@
 		        <div class="row">
 		            <div class="section_heading align-center mb-40">
 		                <h2>Recent News</h2>
-		                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+		                <p>Stay updated with the latest news and developments.</p>
 		            </div>
 		        </div><!-- Section Heading -->
 		        <div class="row">
@@ -449,9 +449,9 @@
 		                    <div class="blog_item wow swing" data-wow-delay="0ms" data-wow-duration="1000ms">
 		                        <figure class="post_thumb">
                                     <img src="img/blog-1.jpg" alt="Blog Post">
-		                            <div class="span">10 Jan<br>2018</div>
+		                            <div class="span">26 May<br>2024</div>
 		                            <a href="#" class="blog_title">
-		                                <h3>Appdent app landing page template.</h3>
+		                                <h3>SmartHome app landing page.</h3>
 		                            </a>
 		                        </figure>
 		                        <div class="post_content">
@@ -464,9 +464,9 @@
 		                    <div class="blog_item wow swing" data-wow-delay="200ms" data-wow-duration="1000ms">
 		                        <figure class="post_thumb">
                                     <img src="img/blog-2.jpg" alt="Blog Post">
-		                            <div class="span">10 Jan<br>2018</div>
+		                            <div class="span">27 May<br>2024</div>
 		                            <a href="#" class="blog_title">
-		                                <h3>Appdent app landing page template.</h3>
+		                                <h3>SmartHome app landing pagee.</h3>
 		                            </a>
 		                        </figure>
 		                        <div class="post_content">
@@ -479,9 +479,9 @@
 		                    <div class="blog_item wow swing" data-wow-delay="400ms" data-wow-duration="1000ms">
 		                        <figure class="post_thumb">
                                     <img src="img/blog-3.jpg" alt="Blog Post">
-		                            <div class="span">10 Jan<br>2018</div>
+		                            <div class="span">28 May<br>2024</div>
 		                            <a href="#" class="blog_title">
-		                                <h3>Appdent app landing page template.</h3>
+		                                <h3>SmartHome app landing page.</h3>
 		                            </a>
 		                        </figure>
 		                        <div class="post_content">
