modification des icones de reseaux sociaux

--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
 	                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 	                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 	                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-	                     <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+	                     <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li>
 	                     <li><a href="#"><i class="fa fa-skype"></i></a></li>
-	                     <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+	                     <li><a href="#"><i class="fa fa-pinterest"></i></a></li> -->
 	                </ul><!-- /.social_link -->
 				</div>
        		</div><!-- /.subscribe_wrapper -->
