--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Appdent is a app landing page. Where include 6+ landing page template.">
+		<meta name="description" content="SmartHome">
         <meta name="author" content="WowThemez">
        
         <title>SmartSana</title>
